--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,19 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#1a1a1a",
-    "activityBar.activeBorder": "#606020",
-    "activityBar.background": "#1a1a1a",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#606020",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#000000",
+    "activityBar.activeBackground": "#c58551",
+    "activityBar.activeBorder": "#9fdfbc",
+    "activityBar.background": "#c58551",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#9fdfbc",
+    "activityBarBadge.foreground": "#15202b",
+    "statusBar.background": "#aa6c39",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#1a1a1a",
-    "titleBar.activeBackground": "#000000",
+    "statusBarItem.hoverBackground": "#c58551",
+    "titleBar.activeBackground": "#aa6c39",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#00000099",
+    "titleBar.inactiveBackground": "#aa6c3999",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#000000"
+  "peacock.color": "#aa6c39"
 }
